--- a/lessons/09-clientside-frameworks/in_class/public/main.html
+++ b/lessons/09-clientside-frameworks/in_class/public/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app ="myApp">
 	<head>
 		<title>Homework 4 Solution</title>
 	</head>
@@ -27,4 +27,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type='text/javascript' src='javascript/handlebars-v3.0.0.js'></script>
 	<script type='text/javascript' src='javascript/main.js'></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 </html>
